# palautusrepositorio

./: .gitignore  README.md
viikko1/nhl-statistics/: .coverage
viikko1/nhl-statistics/src/: player_reader.py  statistics_service.py
viikko1/nhl-statistics/src/tests/: statistics_service_test.py
viikko1/riippuvuuksien-injektointi/src/tests/: laskin_test.py
viikko2/git-branch-harjoitus/: index.py  logger.py  osamaara.py  tulo.py
viikko2/nhl-reader/: .pylintrc
viikko2/nhl-reader/src/: index.py  player.py
viikko2/poetry-web/: pyproject.toml
viikko3/: retro.md
viikko3/hello-robot/: log.html  output.xml  report.html
viikko3/hello-robot/src/: CounterLibrary.py
viikko3/login/: log.html  output.xml  report.html
viikko3/login/src/services/: user_service.py
viikko3/login/src/tests/: home.robot  login.robot  register.robot  resource.robot
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/verkkokauppa/: .coverage
viikko4/verkkokauppa/src/: kauppa.py
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/tennis/src/: tennis_game.py
viikko6/laskin/src/: kayttoliittyma.py
viikko6/query-language/src/: index.py  matchers.py
viikko7/kivi-paperi-sakset/src/: KPS.py  kps_parempi_tekoaly.py  kps_pelaaja_vs_pelaaja.py  kps_tekoaly.py  tuomari.py
