[project]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = [
    {name = "niinaIsHere",email = "niina.kampman@gmail.com"}
]
requires-python = "^3.12"
dependencies = [
    "sqlalchemy (==1.4.54)",
    "fastapi (>=0.121.1,<0.122.0)",
    "requests (>=2.32.5,<3.0.0)",
    "rich (>=14.2.0,<15.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.0,<10.0.0)"
]
